Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm
@@ -2888,10 +2888,31 @@ static void selectionPositionInformation(WebPage& page, const InteractionInforma
     if (!hitNode || !hitNode->renderer())
         return;
 
-    RenderObject* renderer = hitNode->renderer();
-    boundsPositionInformation(*renderer, info);
+    auto* renderer = hitNode->renderer();
 
+    info.selectability = ([&] {
+        if (renderer->style().userSelectIncludingInert() == UserSelect::None)
+            return InteractionInformationAtPosition::Selectability::UnselectableDueToUserSelectNone;
+
+        if (is<Element>(*hitNode)) {
+            if (isAssistableElement(downcast<Element>(*hitNode)))
+                return InteractionInformationAtPosition::Selectability::UnselectableDueToFocusableElement;
+
+            if (rectIsTooBigForSelection(info.bounds, *result.innerNodeFrame())) {
+                // We don't want to select blocks that are larger than 97% of the visible area of the document.
+                // FIXME: Is this heuristic still needed, now that block selection has been removed?
+                return InteractionInformationAtPosition::Selectability::UnselectableDueToLargeElementBounds;
+            }
+        }
+
+        return InteractionInformationAtPosition::Selectability::Selectable;
+    })();
     info.isSelected = result.isSelected();
+
+    if (info.isLink || info.isImage)
+        return;
+
+    boundsPositionInformation(*renderer, info);
     
     if (is<Element>(*hitNode)) {
         Element& element = downcast<Element>(*hitNode);
@@ -2905,13 +2926,8 @@ static void selectionPositionInformation(WebPage& page, const InteractionInforma
         linkIndicatorPositionInformation(page, attachment, request, info);
         if (attachment.file())
             info.url = URL::fileURLWithFileSystemPath(downcast<HTMLAttachmentElement>(*hitNode).file()->path());
-    } else {
-        info.isSelectable = renderer->style().userSelectIncludingInert() != UserSelect::None;
-        // We don't want to select blocks that are larger than 97% of the visible area of the document.
-        // FIXME: Is this heuristic still needed, now that block selection has been removed?
-        if (info.isSelectable && !hitNode->isTextNode())
-            info.isSelectable = !isAssistableElement(*downcast<Element>(hitNode)) && !rectIsTooBigForSelection(info.bounds, *result.innerNodeFrame());
     }
+
     for (RefPtr currentNode = hitNode; currentNode; currentNode = currentNode->parentOrShadowHostNode()) {
         auto* renderer = currentNode->renderer();
         if (!renderer)
@@ -3087,8 +3103,7 @@ InteractionInformationAtPosition WebPage::positionInformation(const InteractionI
     if (!info.isImage && request.includeImageData && is<HTMLImageElement>(hitTestNode))
         imagePositionInformation(*this, downcast<HTMLImageElement>(*hitTestNode), request, info);
 
-    if (!(info.isLink || info.isImage))
-        selectionPositionInformation(*this, request, info);
+    selectionPositionInformation(*this, request, info);
 
     // Prevent the callout bar from showing when tapping on the datalist button.
 #if ENABLE(DATALIST_ELEMENT)
